tablegen-parser/src/snapshots/tablegen_parser__grammar__tests__class-3.snap
---
source: tablegen-parser/src/grammar.rs
expression: "parse(\"class\")"
---
File
  StatementList
    Class
      Class@0..5 `class`
      Error(5:5:expected class name after 'class' keyword, )
      RecordBody
        ParentClassList
        Body
          Error(5:5:expected ';' or '{' to start body, )

