tablegen-parser/src/snapshots/tablegen_parser__grammar__tests__class_with_body.snap
---
source: tablegen-parser/src/grammar.rs
expression: "parse(\"class Foo<int A> {\n                int B;\n                int C = A;\n                let D = A;\n            }\")"
---
File
  Class
    Class `class`
    Whitespace ` `
    Identifier
      Id `Foo`
    TemplateArgList
      Less `<`
      TemplateArgDecl
        Type
          Int `int`
        Whitespace ` `
        Identifier
          Id `A`
      Greater `>`
    Whitespace ` `
    RecordBody
      ParentClassList
      Body
        LBrace `{`
        Whitespace `\n                `
        BodyItem
          Define
            Type
              Int `int`
            Whitespace ` `
            Identifier
              Id `B`
            Semi `;`
        Whitespace `\n                `
        BodyItem
          Define
            Type
              Int `int`
            Whitespace ` `
            Identifier
              Id `C`
            Whitespace ` `
            Equal `=`
            Whitespace ` `
            Value
              SimpleValue
                Identifier
                  Id `A`
            Semi `;`
        Whitespace `\n                `
        BodyItem
          Let
            Let `let`
            Whitespace ` `
            Identifier
              Id `D`
            Whitespace ` `
            Equal `=`
            Whitespace ` `
            Value
              SimpleValue
                Identifier
                  Id `A`
            Semi `;`
        Whitespace `\n            `
        RBrace `}`

