tablegen-parser/src/snapshots/tablegen_parser__grammar__tests__def.snap
---
source: tablegen-parser/src/grammar.rs
expression: "parse(\"def Foo : Bar;\")"
---
File
  StatementList
    Def
      Def@0..3 `def`
      Whitespace@3..4 ` `
      Value
        InnerValue
          Identifier
            Id@4..7 `Foo`
      Whitespace@7..8 ` `
      RecordBody
        ParentClassList
          Colon@8..9 `:`
          Whitespace@9..10 ` `
          ClassRef
            Identifier
              Id@10..13 `Bar`
        Body
          Semi@13..14 `;`

