tablegen-parser/src/snapshots/tablegen_parser__grammar__tests__field_def.snap
---
source: tablegen-parser/src/grammar.rs
expression: "parse(\"class Foo { int\")"
---
(
    Root@0..15
      StatementList@0..15
        Class@0..15
          ClassKw@0..5 "class"
          Whitespace@5..6 " "
          Identifier@6..10
            Id@6..9 "Foo"
            Whitespace@9..10 " "
          RecordBody@10..15
            ParentClassList@10..10
            Body@10..15
              LBrace@10..11 "{"
              Whitespace@11..12 " "
              FieldDef@12..15
                IntType@12..15
                  Int@12..15 "int"
                Identifier@15..15
    ,
    [
        SyntaxError {
            range: 15..15,
            message: "expected identifier in declaration",
        },
    ],
)
